...
            screenOptions={{ headerShown: false, sceneStyle: { backgroundColor: color.surface.background } }}
          >
            <Tabs.Screen name="index" options={{ title: 'Dashboard' }} />
            <Tabs.Screen name="transactions" options={{ title: 'Transactions' }} />
            <Tabs.Screen name="budgets" options={{ title: 'Budgets' }} />
            <Tabs.Screen name="reports" options={{ title: 'Reports' }} />
            <Tabs.Screen name="settings" options={{ title: 'Settings' }} />
          </Tabs>
        ) : (
          <Redirect href="/onboarding" />
        )
      }
    </QueryState>
...
